--- a/MyCompanyUnitTests/MyCompanyUnitTests.csproj
+++ b/MyCompanyUnitTests/MyCompanyUnitTests.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
+  </ItemGroup>
+
 </Project>
