--- a/MyCompany.Services/MyCompany.Services.csproj
+++ b/MyCompany.Services/MyCompany.Services.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MycompanyRepository\MycompanyRepository.csproj" />
+    <ProjectReference Include="..\MyCompany.Repository\Mycompany.Repository.csproj" />
   </ItemGroup>
 
 </Project>
