--- a/MyCompany.UnitTests/MyCompany.UnitTests.csproj
+++ b/MyCompany.UnitTests/MyCompany.UnitTests.csproj
@@ -15,4 +15,10 @@
     <PackageReference Include="xunit.extensibility.core" Version="2.4.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MyCompany.Api\MyCompany.Api.csproj" />
+    <ProjectReference Include="..\MyCompany.Repository\Mycompany.Repository.csproj" />
+    <ProjectReference Include="..\MyCompany.Services\MyCompany.Services.csproj" />
+  </ItemGroup>
+
 </Project>
